<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/card_action_change_background"
        android:icon="@drawable/ic_wallpaper"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/change_background"/>
    <item
        android:id="@+id/card_action_rename"
        android:icon="@drawable/ic_signature"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/rename"/>
    <item
        android:id="@+id/card_action_copy_uid"
        android:icon="@drawable/ic_barcode"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/copy_uid"/>
    <item
        android:id="@+id/card_action_export"
        android:icon="@drawable/ic_upload"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/export_card"/>
    <item
        android:id="@+id/card_action_delete"
        android:iconTint="?attr/colorOnSurface"
        android:icon="@drawable/ic_trash"
        android:iconTintMode="src_over"
        android:title="@string/delete"/>
</menu>