<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/about_credits"
        android:icon="@drawable/ic_walk"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/about_credits" />

    <item
        android:id="@+id/about_external_credits"
        android:icon="@drawable/ic_bookstand"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/about_libraries_credits" />

    <item
        android:id="@+id/about_licenses"
        android:icon="@drawable/ic_contract"
        android:iconTint="?attr/colorOnSurface"
        android:iconTintMode="src_over"
        android:title="@string/about_licenses" />

</menu>
